project(netconsole)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Werror -Wextra -pedantic -O2")
SET(CMAKE_C_COMPILER   arm-frc-linux-gnueabi-gcc)
SET(CMAKE_CXX_COMPILER arm-frc-linux-gnueabi-g++)
aux_source_directory(. SRC_LIST)
add_executable(netconsole main.cpp)
INSTALL(TARGETS netconsole RUNTIME DESTINATION bin)
