project(netconsole)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Werror -Wextra -pedantic -O2")
SET(CMAKE_C_COMPILER   arm-frc-linux-gnueabi-gcc)
SET(CMAKE_CXX_COMPILER arm-frc-linux-gnueabi-g++)
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath,/opt/GenICam_v2_3/bin/Linux_armv7-a,-rpath,/usr/local/frc/rpath-lib")
aux_source_directory(. SRC_LIST)
add_executable(netconsole-host main.cpp)
INSTALL(TARGETS netconsole-host RUNTIME DESTINATION bin)
